--- a/experiments/siamban_mobilev2_l234/config.yaml
+++ b/experiments/siamban_mobilev2_l234/config.yaml
@@ -30,12 +30,12 @@ POINT:
 
 TRACK:
     TYPE: 'SiamBANTracker'
-    WINDOW_INFLUENCE: 0.4632532824922313  # VOT2018
-    PENALTY_K: 0.08513642556896711  # VOT2018
-    LR: 0.44418184746462425  # VOT2018
-#    WINDOW_INFLUENCE: 0.334450048565355  # VOT2019
-#    PENALTY_K: 0.0012159181005195463  # VOT2019
-#    LR: 0.46386814967815493  # VOT2019
+    WINDOW_INFLUENCE: 0.06148081253411615  # UAV123
+    PENALTY_K: 0.13021007698969958  # UAV123
+    LR: 0.7820617561246336  # UAV123
+#    WINDOW_INFLUENCE: 0.4632532824922313  # UAVDT / DTB70 / VOT2018
+#    PENALTY_K: 0.08513642556896711  # UAVDT / DTB70 / VOT2018
+#    LR: 0.44418184746462425  # UAVDT / DTB70 / VOT2018
     EXEMPLAR_SIZE: 127
     INSTANCE_SIZE: 255
     BASE_SIZE: 8
